tests/error/array_err3.gw
#! [contains] partially empty array init
int i[][3];
